<resources>
    <string name="app_name">SpaceNet</string>
    <string name="explore_luar_angkasa">Explore Luar Angkasa</string>
    <string name="spacenet">SpaceNet</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">SignUp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="change_image">Change Image</string>
    <string name="q_a"><![CDATA[Q & A]]></string>
</resources>