<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg2"
    tools:context=".sign.signin.SignIn">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="429dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/spacenet"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="34dp"
        android:layout_height="36dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="163dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icon" />

    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="252dp"
        android:layout_height="58dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="68dp"
        android:text="@string/masuk"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_email_sign_up"
        android:layout_width="252dp"
        android:layout_height="58dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="355dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="227dp"
        android:autofillHints="@null"
        android:background="@drawable/shape_grey_color"
        android:drawableStart="@drawable/prof"
        android:drawablePadding="25dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/t_c"
        android:textColorHint="@color/t_c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/et_nama_sign_up"
        android:layout_width="252dp"
        android:layout_height="58dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="160dp"
        android:autofillHints="@null"
        android:background="@drawable/shape_grey_color"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="25dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/t_c"
        android:textColorHint="@color/t_c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_regis_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Buat Akun?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_masuk" />

</androidx.constraintlayout.widget.ConstraintLayout>